@@ -2,6 +2,7 @@ package nbi;
 
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.util.Scanner;
 
 import com.google.gson.Gson;
 
@@ -10,31 +11,70 @@ import java.net.http.HttpClient;
 import java.io.IOException;
 import java.io.Serializable;
 
+public class Renfo implements Serializable {
 
-    public class Renfo implements  Serializable {
-    	
-    	
-    	
 	public static void main(String[] args) throws Exception, InterruptedException {
-	    HttpClient client =  HttpClient.newHttpClient();
-		HttpRequest request = HttpRequest.newBuilder().uri(URI.create("https://randomuser.me/api/?page=5&results=5&password=upper,lower,1-16&seed=hoor")).build();
-		HttpResponse<String> response =client.send(request, HttpResponse.BodyHandlers.ofString());
-		String res=response.body();
-		System.out.println(res);
-		Gson gs=new Gson();
+
+		Scanner sc = new Scanner(System.in);
+
+		System.out.println("Enter number of results: ");
+		String num = sc.next();
 		
+		System.out.println("Enter gender : ");
+		String gender = sc.next();
+		
+		System.out.println("Enter Pass : ");
+		String pass = sc.next();
+
+		System.out.println("Enter Nationality : ");
+		String nat = sc.next();
+		
+		System.out.println("Enter Page No. : ");
+		String page = sc.next();
+		
+		System.out.println("Enter Seed : ");
+		String seed = sc.next();
+		
+		System.out.println("What u wanna include in ur screen : ");
+		String include = sc.next();
+//		
+//		System.out.println("What u wanna exclude in ur screen : ");
+//		String exclude = sc.next();
+//		
+		HttpClient client = HttpClient.newHttpClient();
+		HttpRequest request = HttpRequest.newBuilder()
+				.uri(URI.create("https://randomuser.me/api/?results=" + num + "&password=" + pass
+						+ "&nat="+nat + "&gender=" + gender + "&seed="+seed + "&page=" + page 
+						+"&inc="+include + "&noinfo")).build();
+		HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+		String res = response.body();
+		
+		System.out.println("\n"+res);
+		
+		Gson gs = new Gson();
 		Reif data = gs.fromJson(res, Reif.class);
-		System.out.println(data.getInfo().getPage());
-		System.out.println(data.getInfo().getResults());
-		System.out.println(data.getInfo().getSeed());
-		System.out.println(data.getInfo().getVersion());
-		System.out.println(data.getInfo().hashCode());
-		System.out.println(data.getInfo().toString());
-		System.out.println(data.getInfo().getClass());
-		System.out.println(data.getResults().get(0).getEmail());
-		System.out.println(data.getResults().get(0).getPhone());
-//		System.out.println(data.getResults().get(3).getEmail());
-		System.out.println(data.getInfo().getSeed());
-		System.out.println(data.getResults().get(0).getLogin().getPassword());
+
+		
+		int size = data.getResults().size();
+		for (int i = 0; i < size; i++) {
+			System.out.println();
+			System.out.println("name : " + data.getResults().get(i).getName().getFirst());
+			System.out.println("Email : " + data.getResults().get(i).getEmail());
+			System.out.println("Phone : " + data.getResults().get(i).getPhone());
+			System.out.println("Nationality : " + data.getResults().get(i).getNat());
+			System.out.println("Gender : " + data.getResults().get(i).getGender());
+		//	System.out.println("Seed : " + data.getInfo().getSeed());
+		//	System.out.println("Password : " + data.getResults().get(i).getLogin().getPassword());
+			System.out.println("\n******************************");
+			
+//		System.out.println(data.getInfo().getPage());
+//		System.out.println(data.getInfo().getResults());
+//		System.out.println(data.getInfo().getSeed());
+//		System.out.println(data.getInfo().getVersion());
+//		System.out.println(data.getInfo().hashCode());
+//		System.out.println(data.getInfo().toString());
+//		System.out.println(data.getInfo().getClass());
+
+		}
+	}
 }
-    }
